deposit into wallet

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+VNP_TMN_CODE=NJJ0R8FS
+VNP_HASH_SECRET=BYKJBHPPZKQMKBIBGGXIYKWYFAYSJXCW
+VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNP_RETURN_URL=http://datn_be.test/api/user/courses/{course_id}/payment-callback
+VNP_RETURN_URL_FOR_DEPOSIT=http://datn_be.test/api/user/wallets/result
