api thongke giangvien

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "james-heinrich/getid3": "^1.9",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.8",
         "pusher/pusher-php-server": "^7.2"
     },
