--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_DATABASE=datn
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
